# lwasolarproc

./: .gitignore  README.MD  __init__.py  calibration.py  convert_caltab_to_h5parm.py  equalizer.md  method_mem.md  preprocessing_and_imaging.py  pyproject.toml  resources.py  use_dp3_lwa.sh  util.py  visualization.py
flowchart/: flowchart.drawio  flowchart.mmd  task_queue_manage_model.mmd  task_queue_manage_model_simplify.drawio  task_queue_manage_model_simplify.mmd
lwasolarproc/: LWA_sun_PZ.lua  __init__.py  beammodel.py  calibration.py  coords.py  ndfits.py  preprocessing_and_imaging.py  realtime_task_manage.py  resources.py  source_list.py  util.py  visualization.py  wsclean_helper.py
lwasolarproc/script/: __init__.py  plot_conversion_traces.py  save_day_night_conversion.py
script/: data_copy.py  report_eq_groups.py  test_eq.py
scripts/: proc_20260512GRcorona.sh  proc_backlog_example.sh
systemd/user/: lwasunproc.service
